<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartContacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="backup_button_name">Backup contacts</string>
    <string name="start_button_name">START</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration_title">Registration</string>
    <string name="f_name">First name</string>
    <string name="l_name">Last name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="rep_pass">Repeat password</string>
    <string name="submit_button">Submit</string>


</resources>
