<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegistrationActivity">

    <!-- Login form -->
    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="58dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/registration_title"
                android:id="@+id/registration_title"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#00ff00"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/f_name"
                android:ems="10"
                android:id="@+id/reg_first_name"
                android:layout_gravity="center_horizontal"
                android:maxLength="@integer/max_name_length"
                android:singleLine="true"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/l_name"
                android:ems="10"
                android:id="@+id/reg_last_name"
                android:layout_gravity="center_horizontal"
                android:maxLength="@integer/max_name_length"
                android:singleLine="true"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/reg_email"
                android:layout_gravity="center_horizontal"
                android:maxLength="@integer/max_email_length"
                android:singleLine="true"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Login"
                android:ems="10"
                android:id="@+id/reg_login"
                android:layout_gravity="center_horizontal"
                android:maxLength="@integer/max_name_length"
                android:singleLine="true"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:ems="10"
                android:id="@+id/reg_pass"
                android:layout_gravity="center_horizontal"
                android:maxLength="@integer/max_password_length"
                android:singleLine="true"
                android:maxLines="1"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/rep_pass"
                android:ems="10"
                android:id="@+id/reg_rep_pass"
                android:layout_gravity="center_horizontal"
                android:maxLength="@integer/max_password_length"
                android:singleLine="true"
                android:maxLines="1"
                />



            <Button
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                android:id="@+id/reg_submit_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="-2dp" />


        </LinearLayout>

    </ScrollView>
</merge>
